# CRDT-Redis

./: .clang-format  .gitignore  LICENSE  README.md  Readme.md
DMCK/: .gitignore  CMakeLists.txt  Makefile  README.md  exp_runner.h  main.cpp  op_script.h  op_script.hpp  oracle.h  redis_connect.h  redis_connect.hpp  timer.h
DMCK/TLA/: .gitignore  rwf_rpq.cfg  rwf_rpq.tla  tmp.py
DMCK/TLA/rwf_list/: parse.py  rwf_list.cfg  rwf_list.tla
DMCK/TLA/rwf_rpq/: parse.py  rwf_rpq.tla  tmp.py
MET/: Makefile  README.md  main.cpp  op_script.h  oracle.h  redis_connect.h
MET/TLA/: Readme.md
MET/TLA/addwin_crpq/: addwin_rpq.tla
MET/TLA/addwin_rpq/: addwin_rpq.cfg
MET/TLA/rmvwin_crpq/: rmvwin_rpq.cfg  rmvwin_rpq.tla
MET/TLA/rwf_list/: parse.py  rwf_list.tla
bench/: CMakeLists.txt  Makefile  constants.h  control.py  generator.h  main.c  main.cpp  queueLog.cpp  queueLog.h  queue_log.cpp  queue_log.h
document/: rmv-wim-crpq.bib
document/chinese/: README.md  Readme.md  p2p.md  remove-win RPQ.md  vector_clock.md
experiment/: README.md  Readme.md
experiment/bench/: CMakeLists.txt  Makefile  constants.h  exp_env.cpp  exp_env.h  exp_runner.cpp  exp_runner.h  exp_setting.h  generator.h  main.cpp  queue_log.h  rpq_cmd.cpp  rpq_cmd.h  rpq_generator.cpp  rpq_generator.h  rpq_log.cpp  rpq_log.h  util.cpp  util.h
experiment/bench/list/: list_basics.h  list_cmd.h  list_exp.cpp  list_exp.h  list_generator.cpp  list_generator.h  list_log.cpp  list_log.h
experiment/bench/rpq/: rpq_basics.h  rpq_cmd.cpp  rpq_cmd.h  rpq_exp.cpp  rpq_exp.h  rpq_generator.cpp  rpq_generator.h  rpq_log.cpp  rpq_log.h
experiment/redis_test/: 6379.conf  6383.conf  client.sh  connection.py  construct_replication.sh  server.sh  test.py  test.sh
experiment/result/: result-env.py  result-time.py  result.py
redis-4.0.8/: CMakeLists.txt  redis.conf
redis-4.0.8/src/: CRDT.h  CRDT_exp.h  Makefile  RWFramework.c  RWFramework.h  lamport_clock.h  list_basics.c  list_basics.h  networking.c  object.c  p2p.c  rdb.c  rdb.h  server.c  server.h  t_ozset.c  t_rlist.c  t_rwflist.c  t_rwfzset.c  t_rzset.c  vector_clock.c  vector_clock.h
redis-6.0.5/: CMakeLists.txt  README.md  redis.conf
redis-6.0.5/src/: CRDT.h  CRDT_exp.h  Makefile  RWFramework.c  RWFramework.h  lamport_clock.h  list_basics.c  list_basics.h  networking.c  p2p.c  server.c  server.h  t_ozset.c  t_rlist.c  t_rwflist.c  t_rwfzset.c  t_rzset.c  t_zset.c  vector_clock.c  vector_clock.h
redis_test/: 6379.conf  6380.conf  6381.conf  6382.conf  6383.conf  clean.sh  connection.py  oztest  rztest  shutdown.sh  test.py  test.sh
result/: result.py
记录/: Readme.md  add-win RPQ.md  p2p.md
